--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 flask==2.3.
 urllib3==1.26.16
 flask-limiter==3.10.1
+python-dotenv==0.21.0 
+pymongo==4.7.3
+python-dotenv==0.21.0
+apscheduler==3.11.0 
